[gd_scene load_steps=3 format=3 uid="uid://cxl6gp4tcalj8"]

[ext_resource type="Script" path="res://scale_benchmarks_viewer.gd" id="1"]
[ext_resource type="Script" path="res://chart.gd" id="2"]

[node name="ScaleBenchmarks" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
split_offset = 200
script = ExtResource("1")

[node name="BenchmarkList" type="ItemList" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
mouse_filter = 0
split_offset = 200

[node name="VersionList" type="ItemList" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="GraphArea" type="ColorRect" parent="HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.0588235, 0.0588235, 0.0588235, 1)

[node name="MainGraph" type="Control" parent="HSplitContainer/VBoxContainer/GraphArea"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="SecondaryGraph" type="Control" parent="HSplitContainer/VBoxContainer/GraphArea"]
visible = false
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")
line_color = Color(0, 0.695313, 1, 1)

[node name="GraphSettings" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ModeSelector" type="OptionButton" parent="HSplitContainer/VBoxContainer/GraphSettings"]
layout_mode = 2
toggle_mode = false

[node name="ReferenceCheckbox" type="CheckBox" parent="HSplitContainer/VBoxContainer/GraphSettings"]
layout_mode = 2
text = "Compare"

[node name="MainLabel" type="Label" parent="HSplitContainer/VBoxContainer/GraphSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Ref"

[node name="SecondaryLabel" type="Label" parent="HSplitContainer/VBoxContainer/GraphSettings"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.694118, 1, 1)
text = "Ref"

[connection signal="item_selected" from="BenchmarkList" to="." method="_on_BenchmarkList_item_selected"]
[connection signal="item_selected" from="HSplitContainer/VersionList" to="." method="_on_VersionList_item_selected"]
[connection signal="item_selected" from="HSplitContainer/VBoxContainer/GraphSettings/ModeSelector" to="." method="_on_ModeSelector_item_selected"]
[connection signal="toggled" from="HSplitContainer/VBoxContainer/GraphSettings/ReferenceCheckbox" to="." method="_on_ReferenceCheckbox_toggled"]
